--- a/app/src/main/res/layout/fragment_group_wait.xml
+++ b/app/src/main/res/layout/fragment_group_wait.xml
@@ -13,7 +13,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
+        android:id="@+id/waitLv"
         android:layout_weight="1" />
 
     <Button
