サービス等実装 - サービス実装 - 位置情報表示実装 - 位置送信実装

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -14,7 +14,7 @@
 
             <fragment android:layout_width="match_parent"
                 android:layout_height="match_parent" android:id="@+id/map"
-                tools:context="com.kawakawaplanning.gpsdetag.MapsActivity"
+                tools:context="com.kawakawaplanning.atsumare.activity.MapsActivity"
                 android:name="com.google.android.gms.maps.SupportMapFragment" />
 
             <Button
