--- a/app/src/main/res/layout/fragment_group_wait.xml
+++ b/app/src/main/res/layout/fragment_group_wait.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="スタート"
-        android:id="@+id/start"
+        android:id="@+id/startBtn"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/button" />
 
