--- a/app/src/main/res/menu/menu_group.xml
+++ b/app/src/main/res/menu/menu_group.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.kawakawaplanning.atsumare.GroupActivity">
+    tools:context=".activity.GroupActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
