--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,4 +76,13 @@
             android:background="@drawable/button" />
     </LinearLayout>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Twitterログイン"
+        android:id="@+id/twitterLoginBtn"
+        android:textColor="@color/brown"
+        android:background="@drawable/button"
+        android:layout_gravity="right" />
+
 </LinearLayout>
