ソーシャルログイン実装 - Twitterログイン - FaceBookログイン

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,13 +76,17 @@
             android:background="@drawable/button" />
     </LinearLayout>
 
-    <Button
+    <com.twitter.sdk.android.core.identity.TwitterLoginButton
+        android:id="@+id/twitter_login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Twitterログイン"
-        android:id="@+id/twitterLoginBtn"
-        android:textColor="@color/brown"
-        android:background="@drawable/button"
+        android:layout_gravity="right"/>
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/facebook_login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="right" />
+
 
 </LinearLayout>
