--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,17 +1,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back"
     android:orientation="vertical"
-    tools:context="${relativePackage}.${activityClass}" >
+    tools:context="${relativePackage}.${activityClass}">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ユーザーID"
-        android:textColor="@color/brown" />
+        android:textColor="@color/brown"
+        android:layout_marginBottom="8dp"/>
 
     <EditText
         android:id="@+id/idEt"
@@ -19,7 +21,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="text"
-        android:textColor="@color/brown">
+        android:textColor="@color/brown"
+        android:layout_marginBottom="8dp">
 
         <requestFocus />
     </EditText>
@@ -28,7 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="パスワード"
-        android:textColor="@color/brown" />
+        android:textColor="@color/brown"
+        android:layout_marginBottom="8dp"/>
 
     <EditText
         android:id="@+id/pwEt"
@@ -36,7 +40,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="text|textPassword"
-        android:textColor="@color/brown"/>
+        android:textColor="@color/brown"
+        android:layout_marginBottom="8dp"/>
 
     <CheckBox
         android:id="@+id/autoCb"
@@ -45,13 +50,14 @@
         android:layout_gravity="right"
         android:checked="false"
         android:text="自動ログイン"
-        android:textColor="@color/brown" />
+        android:textColor="@color/brown"
+        android:layout_marginBottom="16dp"/>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/signUpBtn"
@@ -59,7 +65,8 @@
             android:layout_height="wrap_content"
             android:background="@drawable/button"
             android:text="新規会員登録"
-            android:textColor="@color/brown"/>
+            android:textColor="@color/brown"
+            android:layout_marginBottom="8dp"/>
 
         <Space
             android:layout_width="wrap_content"
@@ -71,22 +78,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
+            android:background="@drawable/button"
             android:text="ログイン"
             android:textColor="@color/brown"
-            android:background="@drawable/button" />
+            android:layout_marginBottom="8dp"/>
     </LinearLayout>
+
 
     <com.twitter.sdk.android.core.identity.TwitterLoginButton
         android:id="@+id/twitter_login_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"/>
+        android:layout_marginBottom="8dp"
+        />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/facebook_login_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="right" />
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"/>
 
 
 </LinearLayout>
